<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:text="@string/txt_purchase_management"/>

    <Button
        android:id="@+id/btn_new_purchase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/btn_add_purchase"/>

    <Button
        android:id="@+id/btn_list_purchase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_purchase_history"/>
</LinearLayout>